prevent the post count from clipping into the community name

--- a/src/webfiles/ctr/css/juxt.css
+++ b/src/webfiles/ctr/css/juxt.css
@@ -394,8 +394,7 @@ header svg {
     white-space: nowrap;
     text-overflow: ellipsis;
     top: 8px;
-    position: absolute;
-    overflow: clip
+    position: absolute
 }
 
 .post .community-banner,
